# mommy

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/elicitation/: REQUIREMENTS.md
docs/specification/: REQUIREMENTS.md
mommy/: app.py  config.py  models.py  views.py
mommy/blueprints/authentication/: forms.py  views.py
mommy/blueprints/dashboard/: forms.py  views.py
mommy/blueprints/share/: views.py
mommy/static/css/: base.css
mommy/static/js/: form.js
mommy/templates/: base.html
mommy/templates/authentication/: sign_in.html  sign_up.html
mommy/templates/dashboard/: add.html  close.html  home.html  remove.html  share.html
mommy/templates/share/: list.html  month.html
tests/: conftest.py  test_user_db.py
tests/app/: test_app.py
tests/database/: test_tb_months.py  test_tb_prototypes.py  test_tb_users.py
